[tool.poetry]
name = "botpartytask"
version = "0.1.0"
description = ""
authors = ["Anastasia Khromova <a.khromova93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
motor = "^3.4.0"
aiogram = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
