[tool.poetry]
name = "botpartytask3-11"
version = "0.1.0"
description = ""
authors = ["Anastasia Khromova <a.khromova93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.5.0"
motor = "^3.4.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
